// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesComponent should create 1`] = `
<vtm-notes
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-additionalNotesRecorded"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-notes>
`;

exports[`NotesComponent should render edit template if editState is EDIT 1`] = `
<vtm-notes
  editState={[Function Number]}
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-additionalNotesRecorded"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-notes>
`;

exports[`NotesComponent should render view template if editState is VIEW_ONLY 1`] = `
<vtm-notes
  editState="0"
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dd
        class="govuk-summary-list__value border--bottom-none"
        id="test-additionalNotesRecorded"
      >
         - 
      </dd>
    </div>
  </dl>
</vtm-notes>
`;
